# myblog

./: .replit  README.md  app.py  config.py  forms.py  models.py  pyproject.toml  routes.py  utils.py
static/css/: style.css
static/js/: script.js
templates/: about.html  base.html  category.html  contact.html  index.html  portfolio.html  portfolio_project.html  post.html  search.html  tag.html
templates/admin/: base.html  create_portfolio_project.html  create_post.html  dashboard.html  edit_portfolio_project.html  edit_post.html  login.html  manage_categories.html  manage_comments.html  manage_portfolio.html  manage_posts.html  manage_tags.html
