[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "markdown>=3.7",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "unidecode>=1.3.8",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
